// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When the SpeechBubble component is created and the errorMessage prop is set to a truthy string should render correctly 1`] = `
<div
  className="speech-bubble"
>
  <div
    className="speech-bubble__text-container"
  >
    <p
      className="speech-bubble__text-container__error-message"
    >
      test_error_messagge
    </p>
    <div
      className="speech-bubble__pointer-container"
    />
  </div>
</div>
`;

exports[`When the SpeechBubble component is created and the errorMessage prop is set to null should render correctly 1`] = `
<div
  className="speech-bubble"
>
  <div
    className="speech-bubble__text-container"
  >
    <p
      className="speech-bubble__text-container__word"
      onClick={[Function]}
    >
      test_word(1)
    </p>
    <div
      className="speech-bubble__pointer-container"
    />
  </div>
</div>
`;
